force-app/main/default/objects/Year__c/fields/Number_Of_Classes__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Classes__c</fullName>
    <label>Number Of Classes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>