force-app/main/default/objects/Year__c/fields/Number_Of_Teachers__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Teachers__c</fullName>
    <label>Number Of Teachers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>