force-app/main/default/objects/Year__c/fields/Total_Salary_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary_Expenses__c</fullName>
    <label>Total Salary Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>